h2,class-byline edit

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Purpose - To display live Cryptocurrency prices and Stock Market prices
 		<div class="container">
 			<div class="title">
 				<h2>Live Bitcoin prices</h2> <!-- Tracks five CryptoCurrency -->
-				<span class="byline">The CryptoTrack Bitcoin widget displays the most recent data</span> </div>
+				<span class="byline">This CryptoTrack Bitcoin widget displays the most recent data</span> </div>
 				<div class="btcwdgt-chart"> <!-- This section of code uses javascript to invoke the cryptonator widget -->
 					<script type="text/javascript"> 
 						crypt_multi_num_cur = "5";
